...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ed3-Y4-WTO">
                                <rect key="frame" x="208" y="265" width="184" height="70"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fxG-BT-bcj">
                                        <rect key="frame" x="5" y="0.0" width="175" height="30"/>
                                        <state key="normal" title="Trigger site handled error"/>
                                        <connections>
                                            <action selector="someUserAction1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Agf-I7-iv5"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8lq-2P-iwe">
                                        <rect key="frame" x="0.0" y="40" width="184" height="30"/>
                                        <state key="normal" title="Trigger unanticipated error"/>
                                        <connections>
                                            <action selector="someUserAction2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cQ6-VW-JEa"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
